--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     body {
         background-color: #000;
     }
+    iframe{
+        padding: 15px;
+    }
 </style>
 <body>
-    <iframe width='370' height='650' frameborder='0' scrolling='no' src='https://www.aifreegame.com/embed/crossy-road.html'></iframe>     
+    <iframe width='400' height='850' frameborder='0' scrolling='no' src='https://www.aifreegame.com/embed/crossy-road.html'></iframe>     
 </body>
 </html>
