--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     }
 </style>
 <body>
-    <iframe width='400' height='850' frameborder='0' scrolling='no' src='https://www.aifreegame.com/embed/crossy-road.html'></iframe>     
+    <iframe width='400' height='850' frameborder='0' scrolling='no' src='https://www.aifreegame.com/embed/crossy-road.html' sound="0"></iframe>     
 </body>
 </html>
