--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         background-color: #000;
     }
     iframe{
-        padding: 15px;
+        padding-top: 15px;
     }
 </style>
 <body>
-    <iframe width='350' height='800' frameborder='0' scrolling='no' src='https://www.aifreegame.com/embed/crossy-road.html' sound="0"></iframe>     
+    <iframe width='370' height='820' frameborder='0' scrolling='no' src='https://www.aifreegame.com/embed/crossy-road.html' sound="0"></iframe>     
 </body>
 </html>
